--- a/src/app/pages/detail-user/detail-user.html
+++ b/src/app/pages/detail-user/detail-user.html
@@ -58,20 +58,34 @@
                         <label class="block text-gray-700 mb-1" for="username">Username</label>
                         <input id="username" formControlName="username" type="text" required
                             class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400" />
-                        @if (isSubmitted && profileForm.controls['username'].invalid) {
-                            <div class="text-red-500 text-xs mt-1">
+                        @if (isSubmitted && profileForm.controls['username'].errors) {
+                            @if (profileForm.controls['username'].errors['required']) {
+                                <div class="text-red-500 text-xs mt-1">
                                 Username is required.
-                            </div>
+                                </div>
+                            }
+                            @if (profileForm.controls['username'].errors['maxlength']) {
+                                <div class="text-red-500 text-xs mt-1">
+                                Username cannot exceed 50 characters.
+                                </div>
+                            }
                         }
                     </div>
                     <div>
                         <label class="block text-gray-700 mb-1" for="email">Email</label>
                         <input id="email" formControlName="email" type="email" required
                             class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400" />
-                        @if (isSubmitted && profileForm.controls['email'].invalid) {
-                            <div class="text-red-500 text-xs mt-1">
-                                Invalid Email.
-                            </div>
+                        @if (isSubmitted && profileForm.controls['email'].errors) {
+                            @if (isSubmitted && profileForm.controls['email'].errors['required']) {
+                                <div class="text-red-500 text-xs mt-1">
+                                    Email is required.
+                                </div>
+                            }
+                            @if (isSubmitted && profileForm.controls['email'].errors['email']) {
+                                <div class="text-red-500 text-xs mt-1">
+                                    Please enter a valid email address.
+                                </div>
+                            }
                         }
                     </div>
                     @if (canUpdateUser()) {
@@ -85,6 +99,13 @@
                                     <option value="super_admin">Super Admin</option>
                                 }
                             </select>
+                            @if (isSubmitted && profileForm.controls['role'].errors) {
+                                @if (isSubmitted && profileForm.controls['role'].errors['required']) {
+                                    <div class="text-red-500 text-xs mt-1">
+                                        Role is required.
+                                    </div>
+                                }
+                            }
                         </div>
                     }
                     <button type="submit"
