--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -22,29 +22,40 @@
                 <label class="block text-gray-700 mb-1" for="email">Email</label>
                 <input formControlName="email" id="email" name="email" type="email" required
                     class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400" />
-                @if (isSubmitted && formLogin.controls['email'].invalid) {
-                    <div class="text-red-500 text-xs mt-1">
-                        Email is required and must be a valid email address.
-                    </div>
+                @if (isSubmitted && formLogin.controls['email'].errors) {
+                    @if (isSubmitted && formLogin.controls['email'].errors['required']) {
+                        <div class="text-red-500 text-xs mt-1">
+                            Email is required.
+                        </div>
+                    }
+                    @if (isSubmitted && formLogin.controls['email'].errors['email']) {
+                        <div class="text-red-500 text-xs mt-1">
+                            Please enter a valid email address.
+                        </div>
+                    }
                 }
             </div>
             <div>
                 <label class="block text-gray-700 mb-1" for="password">Password</label>
                 <input formControlName="password" id="password" name="password" type="password" required
                     class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-400" />
-                @if (isSubmitted && formLogin.controls['password'].invalid) {
-                    <div class="text-red-500 text-xs mt-1">
-                        Password is required and must be at least 6 characters long.
-                    </div>
+                @if (isSubmitted && formLogin.controls['password'].errors) {
+                    @if (isSubmitted && formLogin.controls['password'].errors['required']) {
+                        <div class="text-red-500 text-xs mt-1">
+                            Password is required.
+                        </div>
+                    }
+                    @if (isSubmitted && formLogin.controls['password'].errors['minlength']) {
+                        <div class="text-red-500 text-xs mt-1">
+                            Password must be at least 6 characters long.
+                        </div>
+                    }
                 }
             </div>
             <button type="submit"
                 class="w-full py-2 rounded bg-blue-500 text-white font-semibold hover:bg-blue-600 transition">
                 Login
             </button>
-            @if (errorMessage) {
-                <div class="text-red-500 mb-2">{{ errorMessage }}</div>
-            }
         </form>
     </div>
 
