--- a/src/app/pages/page-not-found/page-not-found.html
+++ b/src/app/pages/page-not-found/page-not-found.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="min-h-screen flex flex-col">
 
     <div class="flex-1 flex flex-col items-center justify-center relative overflow-hidden">
@@ -21,3 +22,4 @@
     </div>
 
 </div>
+<app-footer></app-footer>
