--- a/src/app/pages/list-product/list-product.html
+++ b/src/app/pages/list-product/list-product.html
@@ -29,8 +29,14 @@
                     <table class="min-w-full divide-y divide-gray-200">
                         <thead class="bg-gray-50">
                             <tr>
-                                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Product Name</th>
-                                <th class="px-6 py-3"></th>
+                                    <th (click)="changeSort('name')"
+                                        class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer">
+                                        Product Name
+                                        @if (sortField === "name") {
+                                            <span>{{ sortDirection === 'asc' ? '⬆️' : '⬇️' }}</span>
+                                        }
+                                    </th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"></th>
                             </tr>
                         </thead>
                         <tbody class="bg-white divide-y divide-gray-200">
