--- a/src/app/pages/manage-users/manage-users.html
+++ b/src/app/pages/manage-users/manage-users.html
@@ -23,8 +23,13 @@
                 <table class="min-w-full divide-y divide-gray-200">
                     <thead class="bg-gray-50">
                         <tr>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
-                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Email</th>
+                            <th (click)="changeSort('username')"
+                                class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer">
+                                    Username
+                                @if (sortField === "username") {
+                                    <span>{{ sortDirection === 'asc' ? '⬆️' : '⬇️' }}</span>
+                                }
+                            </th>
                             <th class="px-6 py-3"></th>
                         </tr>
                     </thead>
@@ -34,7 +39,6 @@
                                 @for (user of paginatedUsers; track user.id_user) {
                                     <tr>
                                         <td class="px-6 py-4 whitespace-nowrap text-gray-900">{{ user.username }}</td>
-                                        <td class="px-6 py-4 whitespace-nowrap text-gray-900">{{ user.email }}</td>
                                         <td class="px-6 py-4 whitespace-nowrap text-right">
                                             <button (click)="gotoDetails(user.id_user!)" class="px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600 transition">
                                                 Details
